# Drivetrain

./: .gitignore  .pre-commit-config.yaml  README.md  bench.py  check_env_shape.py  exec.py  main.py  ppo_agent_plays.py  ppo_train.py  pyproject.toml  rollback_ppo_0.4m  torchtrain.py  train.py  training_progress.json
.cache/fontconfig/: 00d5189c1d5ced4af9bb23cbaa9b1e94-le64.cache-9
.matplotlib_cache/: fontlist-v390.json
artifacts/: q_table.pkl
docs/: developers_guide.md
runs/simple_trac_sb3sac/simple_trac_sb3sac_1/: events.out.tfevents.1765356875.L-5CG146BSW4.78553.0
src/editor/: track_editor.py
src/mm/: nn.md
src/topdown/: __init__.py  car.py  car_env.py  contact.py  control.py  ground.py  gym_env.py  input.py  render.py  rl_agent.py  runtime.py  sensors.py  simulation.py  spline.py  state.py  timing.py  tire.py  track.py  track_builder.py  track_loader.py  track_persistence.py  vector_env.py
tests/: test_contact_listener.py  test_control.py  test_gym_env.py  test_runtime.py  test_sensors.py  test_timing_inputs.py  test_timing_persistence.py  test_track_persistence.py  test_trainer_progress.py  test_vector_env.py
tracks/: drawn_track.json  drawn_track_good.json  good_track.json  hand_drawn.json  max_speed.json  nascar.json  simple.json  test_track.json  training_track.json
