[project]
name = "car-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "box2d>=2.3.10",
    "box2d-py>=2.3.8",
    "dot>=0.3.0",
    "gymnasium>=1.2.1",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pillow>=10.4.0",
    "pygame>=2.6.1",
    "pygame-ce>=2.5.5",
    "pylint>=4.0.4",
    "pytest>=8.4.2",
    "rl-zoo3>=2.7.0",
    "stable-baselines3>=2.7.0",
    "swig>=4.3.1.post0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
